fix dark mode

--- a/style/home.scss
+++ b/style/home.scss
@@ -368,7 +368,8 @@ section#clientes {
 				max-width: 100%;
 				object-fit: contain;
 				object-position: bottom;
-				left: -55px;
+				left: 0;
+				margin: auto;
 			}
 
 		}
